# tsg-client

./: .flake8  .gitignore  .gitlab-ci.yml  ABCD  LICENSE  README.md  TESTE  dotenv  gl-sbom-pypi-poetry.cdx.json  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: .sync.yml.swp  automerge.yaml  main.yml  publish_docs.yml  sync.yml  sync_branches.yml
docs/source/: conf.py  contacts.md  examples.connection_to_our_connector.rst  examples.delete_artifact.rst  examples.edit_artifact.rst  examples.get_connector_self_description.rst  examples.get_external_artifacts.rst  examples.get_external_catalogs.rst  examples.get_external_download_artifact.rst  examples.get_external_open_api_specs.rst  examples.get_external_request_openapi_dataapp.rst  examples.get_external_self_description.rst  examples.get_metadata_broker_descriptions.rst  examples.post_artifact.rst  examples.rst  faq.md  getting_started.md  index.rst
examples/: connection_to_our_connector.py  delete_administrative_user.py  delete_artifact.py  delete_catalog.py  edit_artifact.py  generate_contract.py  get_administrative_users.py  get_catalogs.py  get_connector_self_description.py  get_external_artifacts.py  get_external_catalogs.py  get_external_download_artifact.py  get_external_open_api_specs.py  get_external_request_openapi_dataapp.py  get_external_self_description.py  get_metadata_broker_descriptions.py  post_administrative_user.py  post_artifact.py  update_administrative_user.py
files/artifacts/: default.json
files/contracts/: default.json
tsg_client/controllers/: Endpoints.py  RequestController.py  SelfDescription.py  TSGController.py  __init__.py
tsg_client/utils/: contracts.py  file_handling.py
unittests/: TSGController.py
